# ai-engineering-playground

./: .gitignore  README.md
automation/jira-client/examples/: add_comment.py  get_issue.py
automation/jira-client/src/jira_client/api/: projects.py
automation/python/jira-client/: pyproject.toml
automation/python/jira-client/doc/: specs.md
automation/python/jira-client/examples/: bulk_create_issues.py  get_open_issues.py  transition_issue.py
automation/python/jira-client/src/jira_client/: config.py  utils.py
automation/python/jira-client/src/jira_client/api/: base.py
automation/python/jira-client/src/jira_client/models/: __init__.py
automation/python/sharepoint-ms/: .env  .env.example  LICENSE  README.md  pyproject.toml
automation/python/sharepoint-ms/examples/: 00_diagnose.py  01_authenticate.py  02_get_site.py  03_list_drives.py  04_list_documents_root.py  05_list_subfolder.py  06_upload_file.py  07_download_file.py  08_check_permissions.py  _env.py  basic_usage.py  check_user_permissions.py
automation/python/sharepoint-ms/src/sharepoint_ms/: __init__.py  _auth.py  _http.py  client.py  config.py  drive_service.py  exceptions.py  permission_service.py  site_service.py
automation/python/sharepoint-ms/src/sharepoint_ms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
automation/sharepoint-ms/: README.md  pyproject.toml
automation/sharepoint-ms/examples/: basic_usage.py  check_user_permissions.py
claude-code-doc/: Approccio_Ibrido_Agenti_AI_Claude_Codex.md  atlassian-mcp-claude-manual.md  claude-code-setup-manual.md  info.xlsx
jira-client/: .env  .env.example  README.md
jira-client/examples/: check_auth.py  create_issue.py  get_closed_issues.py  get_projects.py  search_jql.py  update_issue.py
jira-client/src/jira_client/: __init__.py  client.py  exceptions.py
jira-client/src/jira_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jira-client/src/jira_client/api/: __init__.py  comments.py  issues.py
jira-client/src/jira_client/models/: comment.py  issue.py  project.py
prompts/: doc_agent.md  generate_prd.md  qt_style_prompt.md
skaffolding/: project_structure.md  project_structure_feature_based.md
