[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharepoint-ms"
version = "0.1.0"
description = "Libreria Python per interagire con Microsoft SharePoint via Microsoft Graph"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AI Engineering Playground" }
]
keywords = ["sharepoint", "microsoft-graph", "automation", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests>=2.31.0"
]

[project.urls]
Homepage = "https://example.invalid/sharepoint-ms"
Repository = "https://example.invalid/sharepoint-ms"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
